--- a/projects/ngx-floating-img-tester/src/app/features/examples/examples.component.html
+++ b/projects/ngx-floating-img-tester/src/app/features/examples/examples.component.html
@@ -30,7 +30,7 @@
       </div>
     </fit-section>
 
-    <fit-section title="vpPadding example">
+    <fit-section title="viewport padding example">
         <div class="example-wrapper">
           <div class="example-content ngx-4-img">
             <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" title="img_1" imgSrc="../../../assets/examples/originals/img_13.jpeg">
