--- a/projects/ngx-floating-img/src/lib/ngx-floating-img.component.css
+++ b/projects/ngx-floating-img/src/lib/ngx-floating-img.component.css
@@ -35,6 +35,10 @@ figure::ng-deep img {
     height: auto;
 }
 
+figure::ng-deep img:not(.fi-img-full) { 
+    height: 100%;
+}
+
 figure::ng-deep img:NOT(.fi-img-full) {
     cursor: zoom-in;
 }
@@ -117,7 +121,7 @@ figure .fi-img-container .fi-img-wrapper .fi-img-actions-wrapper .fi-img-top-bar
 /* floating image actions wrapper bottom bar */
 figure .fi-img-container .fi-img-wrapper .fi-img-actions-wrapper .fi-img-bottom-bar {
     position: absolute;
-    bottom: -1px;
+    bottom: 0px;
     width: 100%;
     height: 5px;
     z-index: 20;
