--- a/projects/ngx-floating-img-tester/src/app/features/api/api.component.html
+++ b/projects/ngx-floating-img-tester/src/app/features/api/api.component.html
@@ -7,7 +7,7 @@
         <div class="desc-wrapper">
             <ul>
               <li>
-                <p>Add ngxfloatingimg to your Angular project</p>
+                <p>Add ngx-floating-img to your Angular project</p>
                 <code>npm install --save ngx-floating-img</code>
               </li>
               <li>
@@ -107,7 +107,7 @@
                         <label>imgAnimationType</label>
                       </td>
                       <td>
-                        <p>Image animation on show and hide</p>
+                        <p>Image animation type on show and hide</p>
                       </td>
                       <td>
                         <p>any valid css animation (linear, ease-in ...)</p>
@@ -125,7 +125,7 @@
                         <p>Image animation speed on show and hide</p>
                       </td>
                       <td>
-                        <p>any number between 0 (for no animation) and 1000</p>
+                        <p>any number between 0 (for no animation) and 800</p>
                       </td>
                       <td>
                         <p>250</p>
@@ -137,7 +137,7 @@
                         <label>vpPadding</label>
                       </td>
                       <td>
-                        <p>Viewport padding in pixels on show image</p>
+                        <p>Viewport padding in pixels when full image is visible</p>
                       </td>
                       <td>
                         <p>number</p>
@@ -309,7 +309,7 @@
                         <label>afterShow</label>
                       </td>
                       <td>
-                        <p>This event fires after animation is fully completed.</p>
+                        <p>This event fires after show animation is fully completed.</p>
                       </td>
                       <td>
                         <p>component id</p>
