--- a/projects/ngx-floating-img-tester/src/app/features/home/home.component.html
+++ b/projects/ngx-floating-img-tester/src/app/features/home/home.component.html
@@ -9,7 +9,7 @@
             <h2 class="sub-title">installation</h2>
             <ul>
               <li>
-                <p>Add ngxfloatingimg to your Angular project</p>
+                <p>Add ngx-floating-img to your Angular project</p>
                 <code>npm install --save ngx-floating-img</code>
               </li>
               <li>
@@ -29,12 +29,12 @@
       
       <div class="img-wrapper">
         <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [imgSrc]="'../../../assets/examples/originals/img_11.jpeg'">
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" thumbBgColor="#6be3cd" overlayColor="rgba(255, 255, 255, 0.5)" [imgSrc]="'../../../assets/examples/originals/img_11.jpeg'">
             <img src="../../../assets/examples/thumbs/img_11.jpeg" />
           </ngx-floating-img>
         </div>
         <div>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [imgSrc]="'../../../assets/examples/originals/img_13.jpeg'">
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" thumbBgColor="#5a6367" overlayColor="rgba(0, 0, 0, 0.6)" [imgSrc]="'../../../assets/examples/originals/img_13.jpeg'">
             <img src="../../../assets/examples/thumbs/img_13.jpeg" />
           </ngx-floating-img>
         </div>
@@ -42,12 +42,12 @@
       
       <div class="img-wrapper">
         <div>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [imgSrc]="'../../../assets/examples/originals/img_8.jpeg'">
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" overlayColor="rgba(0, 0, 0, 0.6)" [imgSrc]="'../../../assets/examples/originals/img_8.jpeg'">
             <img src="../../../assets/examples/thumbs/img_8.jpeg" />
           </ngx-floating-img>
         </div> 
         <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [imgSrc]="'../../../assets/examples/originals/img_24.jpeg'">
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [vpPadding]="70" [imgAnimationSpeed]="170" thumbBgColor="#ff6e76" [imgSrc]="'../../../assets/examples/originals/img_24.jpeg'">
             <img src="../../../assets/examples/thumbs/img_24.jpeg" />
           </ngx-floating-img>
         </div>
@@ -55,12 +55,12 @@
       
       <div class="img-wrapper">
         <div>
-            <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [imgSrc]="'../../../assets/examples/originals/img_5.jpeg'">
+            <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" overlayColor="#202020" thumbBgColor="#5e5e68" [imgSrc]="'../../../assets/examples/originals/img_5.jpeg'">
               <img src="../../../assets/examples/thumbs/img_5.jpeg" />
             </ngx-floating-img>
         </div> 
         <div>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [imgSrc]="'../../../assets/examples/originals/img_s2.jpeg'">
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="0" thumbBgColor="#6ba900" [imgSrc]="'../../../assets/examples/originals/img_2.jpeg'">
             <img src="../../../assets/examples/thumbs/img_2.jpeg" />
           </ngx-floating-img>
         </div> 
@@ -68,12 +68,12 @@
       
       <div class="img-wrapper">
         <div>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [imgSrc]="'../../../assets/examples/originals/img_3.jpeg'">
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100" thumbBgColor="#fecd7e" [imgSrc]="'../../../assets/examples/originals/img_3.jpeg'">
             <img src="../../../assets/examples/thumbs/img_3.jpeg" />
           </ngx-floating-img>
         </div> 
         <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [imgSrc]="'../../../assets/examples/originals/img_19.jpeg'">
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" overlayColor="#fff" thumbBgColor="#687d82" [imgSrc]="'../../../assets/examples/originals/img_19.jpeg'">
             <img src="../../../assets/examples/thumbs/img_19.jpeg" />
           </ngx-floating-img>
         </div>
@@ -81,12 +81,12 @@
       
       <div class="img-wrapper">
         <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [imgSrc]="'../../../assets/examples/originals/img_20.jpeg'">
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" thumbBgColor="#fede00" [imgSrc]="'../../../assets/examples/originals/img_20.jpeg'">
             <img src="../../../assets/examples/thumbs/img_20.jpeg" />
           </ngx-floating-img>
         </div> 
         <div>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [imgSrc]="'../../../assets/examples/originals/img_1.jpg'">
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="80" overlayColor="rgb(35, 51, 86)" [overlayAnimation]="false" thumbBgColor="#ff84a7" [imgSrc]="'../../../assets/examples/originals/img_1.jpg'">
             <img src="../../../assets/examples/thumbs/img_1.jpg" />
           </ngx-floating-img>
         </div>
