--- a/projects/ngx-floating-img-tester/src/styles/_variables.scss
+++ b/projects/ngx-floating-img-tester/src/styles/_variables.scss
@@ -2,13 +2,13 @@
 
 $browser-context: 14;
 
-$theme-prim-color: #ffde03;
+$theme-prim-color: #14a9c7;
 $theme-prim-var-color: #0097A7;
-$theme-sec-color: #282725;
-$theme-sec-var-color: #707070;
+$theme-sec-color: #002e38;
+$theme-sec-var-color: #7fa8b1;
 $theme-main-border-color: #ddd;
 $theme-main-font-color: #282725;
-$theme-sec-font-color: #707070;
+$theme-sec-font-color: #606060;
 
 $main-small-padding: rem(10);
 $main-padding: rem(20);
