--- a/projects/ngx-floating-img-tester/src/app/shared/components/ngx-code-generator/ngx-code-generator.component.html
+++ b/projects/ngx-floating-img-tester/src/app/shared/components/ngx-code-generator/ngx-code-generator.component.html
@@ -15,7 +15,7 @@
     <ng-container *ngIf="onFullImgLoad != null"><span class="ele-attr"> (onFullImgLoad)</span><span class="ele-attr-op">=</span><span class="ele-attr-val">"{{onFullImgLoad}}"</span></ng-container>
     <ng-container *ngIf="beforeClose != null"><span class="ele-attr"> (beforeClose)</span><span class="ele-attr-op">=</span><span class="ele-attr-val">"{{beforeClose}}"</span></ng-container>
     <ng-container *ngIf="afterClose != null"><span class="ele-attr"> (afterClose)</span><span class="ele-attr-op">=</span><span class="ele-attr-val">"{{afterClose}}"</span></ng-container>
-    <span *ngIf="imgSrc" class="ele-attr"> imgSrc</span><span class="ele-attr-op">=</span><span class="ele-attr-val">"{{imgSrc}}"</span>
+    <ng-container *ngIf="imgSrc != null"><span class="ele-attr"> imgSrc</span><span class="ele-attr-op">=</span><span class="ele-attr-val">"{{imgSrc}}"</span></ng-container>
     <span class="ele-tag">&gt;</span>
   </div>
   <div class="inner-ele">
