Fixed issues with angular universal and lazyloaded modules

--- a/projects/ngx-floating-img-tester/src/app/common/footer/footer.component.scss
+++ b/projects/ngx-floating-img-tester/src/app/common/footer/footer.component.scss
@@ -3,7 +3,7 @@
 footer {
     margin-top: $main-large-padding;
     background: $theme-sec-color;
-    color: $theme-sec-font-color;
+    color: $theme-sec-var-color;
     p {
         padding: $main-small-padding;
         text-align: center;
