--- a/projects/ngx-floating-img-tester/src/app/common/header/header.component.scss
+++ b/projects/ngx-floating-img-tester/src/app/common/header/header.component.scss
@@ -129,6 +129,7 @@ header {
                 margin-left: 0px;
                 left: 0px;
                 top: 0px;
+                background: $theme-sec-color;
                 z-index: 1;
                 nav {
                     display: none;
