--- a/projects/ngx-floating-img-tester/src/app/features/api/api.component.html
+++ b/projects/ngx-floating-img-tester/src/app/features/api/api.component.html
@@ -28,7 +28,7 @@
               <li>
                 <p>Add ngx-floating-img in your template file</p>
                 <code>
-                  <div>&lt;ngx-floating-img ... options ... &gt;</div>
+                  <div>&lt;ngx-floating-img ... [options] ... &gt;</div>
                   <div class="inner-ele">&lt;img src="thumbImgSrc"&gt;&lt;/img&gt;</div>
                   <div>&lt;/ngx-floating-img&gt;</div>
                 </code>
@@ -277,16 +277,18 @@
               &#125;)</code></p>
               <code>
                   <p class="floating-img-options"><b>NGXFloatingImgOptions default values</b></p>
-                  <p>showLoading: <span class="ele-attr">true</span></p>
-                  <p>loadingColor: <span class="ele-attr">transparent</span></p>
-                  <p>imgAnimationType: <span class="ele-attr">'ease-out'</span></p>
-                  <p>imgAnimationSpeed: <span class="ele-attr">250</span></p>
-                  <p>overlayColor: <span class="ele-attr">'transparent'</span></p>
-                  <p>overlayAnimation: <span class="ele-attr">true</span></p>
-                  <p>overlayDismiss: <span class="ele-attr">true</span></p>
-                  <p>thumbBgColor: <span class="ele-attr">'#f0f0f0'</span></p>
-                  <p>vpPadding: <span class="ele-attr">20</span></p>
-                  <p>showCloseButton: <span class="ele-attr">true</span></p>
+                  <p>{{ '{' }}</p>
+                  <p class="inner-ele">showLoading: <span class="ele-attr">true</span></p>
+                  <p class="inner-ele">loadingColor: <span class="ele-attr">transparent</span></p>
+                  <p class="inner-ele">imgAnimationType: <span class="ele-attr">'ease-out'</span></p>
+                  <p class="inner-ele">imgAnimationSpeed: <span class="ele-attr">250</span></p>
+                  <p class="inner-ele">overlayColor: <span class="ele-attr">'transparent'</span></p>
+                  <p class="inner-ele">overlayAnimation: <span class="ele-attr">true</span></p>
+                  <p class="inner-ele">overlayDismiss: <span class="ele-attr">true</span></p>
+                  <p class="inner-ele">thumbBgColor: <span class="ele-attr">'#f0f0f0'</span></p>
+                  <p class="inner-ele">vpPadding: <span class="ele-attr">20</span></p>
+                  <p class="inner-ele">showCloseButton: <span class="ele-attr">true</span></p>
+                  <p>{{ '}' }}</p>
               </code>
           </div>
         </fit-section>
