--- a/projects/ngx-floating-img-tester/src/app/features/home/home.component.scss
+++ b/projects/ngx-floating-img-tester/src/app/features/home/home.component.scss
@@ -22,6 +22,13 @@ header {
                 font-size: rem(16);
                 color: $theme-sec-var-color;
             }
+
+            .info-badges-wrapper {
+                a {
+                    display: inline-block;
+                    margin: $main-padding $main-padding 0 0;
+                }
+            }
         }
     
         .installation-wrapper {
@@ -77,8 +84,14 @@ header {
             padding-top: $main-padding;
 
             a {
-                color: #42A5F5;
-            }
+                color: #2e83c7;
+            }           
+        }
+    }
+
+    #bugs-section {
+        a {
+            color:#2e83c7;
         }
     }
 }
